--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -54,15 +54,28 @@ button {
   height: 15px;
 }
 
-.lds__ripple div {
+.lds__ripple__large {
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+  position: relative;
+}
+
+.lds__ripple div,
+.lds__ripple__large div {
   position: absolute;
-  border: 4px solid green;
+  border: 10px solid green;
   opacity: 1;
   border-radius: 50%;
   animation: pulse 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
 
-.lds__ripple div:nth-child(2) {
+.lds__ripple__large div {
+  animation: pulseLarge 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
+.lds__ripple div:nth-child(2),
+.lds__ripple__large div:nth-child(2) {
   animation-delay: -0.5s;
 }
 
@@ -72,6 +85,18 @@ button {
   }
   70% {
     box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  }
+}
+
+@keyframes pulseLarge {
+  0% {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+  }
+  70% {
+    box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
   }
   100% {
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
