--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -61,16 +61,19 @@ button {
   position: relative;
 }
 
-.lds__ripple div,
+.lds__ripple div {
+  position: absolute;
+  border: 5px solid green;
+  opacity: 1;
+  border-radius: 50%;
+  animation: pulse 1.5s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+
 .lds__ripple__large div {
   position: absolute;
   border: 10px solid green;
   opacity: 1;
   border-radius: 50%;
-  animation: pulse 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
-}
-
-.lds__ripple__large div {
   animation: pulseLarge 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
 
