--- a/styles/globals.css
+++ b/styles/globals.css
@@ -105,3 +105,31 @@ button {
     box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
   }
 }
+
+
+.drop__animate {
+  -webkit-animation: drop 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+  animation: drop 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+}
+
+@-webkit-keyframes drop {
+  0% {
+    -webkit-transform: translateY(-100px);
+    transform: translateY(-100px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
+
+@keyframes drop {
+  0% {
+    -webkit-transform: translateY(-100px);
+    transform: translateY(-100px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+}
